# MyFFmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myffmpeg/: Jni.java  MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
